Fix spacing on allauth templates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -274,9 +274,9 @@ input[name='q']::placeholder {
   }
 }
 @media (min-width: 768px){
-    .allauth-form-inner-content {
+    /* .allauth-form-inner-content {
         height: calc(100vh - 220px);
-    }
+    } */
 }
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
@@ -315,15 +315,19 @@ input[name='q']::placeholder {
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
-    body {
+    /* body {
         height: calc(100vh - 116px);
-    }
-    .allauth-form-inner-content {
-        margin-top: 80px;
-    }
+    } */
+    /* .allauth-form-inner-content {
+        margin-bottom: 2rem;
+    } */
 }
 
 /* Allauth form formatting */
+
+.allauth-form-inner-content {
+    margin-bottom: 2rem;
+}
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem;
